@@ -1,3 +1,5 @@
+* Invoice premiums with at_contract_signature frequency at contract activation
+* Manage invoicing of non periodic frequencies
 * Add a wizard to change contract bank account
 * Add rating webservice
 * Add invoice dates to description for contract insurance invoices
